Bug Fix: Fixes positioning of CatalogMenu and LayerMenu and prohibits moving them so that they are out of the screen.

--- a/fdds/css/catalogMenu.css
+++ b/fdds/css/catalogMenu.css
@@ -4,8 +4,8 @@
     z-index:6000;
     width: 600px;
     height: 400px;
-    top: 140px;
-    left: 340px;
+    top: 25%;
+    left: 25%;
     background:#f2f2f2;
     border-radius: 4px;
     line-height: normal;
