--- a/fdds/css/layerController.css
+++ b/fdds/css/layerController.css
@@ -2,7 +2,7 @@
     position: absolute;
     display: none;
     right: 20px;
-    top: 20px;
+    top: 5%;
     z-index: 5000;
     width: 300px;
     max-height: 85%;
